--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,13 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="easy binding"
-            android:onClick="easyBinding"/>
+            android:text="基础用法"
+            android:onClick="toEasy"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="双向绑定"
+            android:onClick="toTwoway"/>
     </LinearLayout>
 </layout>
